--- a/Exercicios/exerc13/src/app/app.component.html
+++ b/Exercicios/exerc13/src/app/app.component.html
@@ -1,62 +1,73 @@
-<h1>
-  {{title}}
-</h1>
+
 
 <form #orderForm="ngForm">
-  <div class = "form-group">
+  
+  <div>
+      <h1>
+          {{title}}
+        </h1>
+  </div>
+
+  <div class="form-group">
     <label> Nome: </label>
-    <input type = "text" class = "control-form" [ngModel]="orderModel.name" name = "name" >
+    <input type="text" class="control-form" [ngModel]="orderModel.name" name="name">
   </div>
 
-  <div class = "form-group">
+  <div class="form-group">
     <label> E-mail: </label>
-    <input type = "email" class = "control-form" [ngModel]="orderModel.email" name = "email">
+    <input type="email" class="control-form" [ngModel]="orderModel.email" name="email">
   </div>
 
-  <div class = "form-group">
+  <div class="form-group">
     <label> Telefone: </label>
-    <input type = "tel" class = "control-form" [ngModel]="orderModel.phone" name = "phone">
+    <input type="tel" class="control-form" [ngModel]="orderModel.phone" name="phone">
   </div>
- 
-  <div class = "form-group">
-    <select class = "custom-select" [ngModel]="orderModel.drink" name = "drink_option">
-      <option value = ""> O que você gostaria de beber? </option>
-      <option value = "" *ngFor='let b of bebidas'> {{b}} </option>
+
+  <div class="form-group">
+    <select class="custom-select" [ngModel]="orderModel.drink" name="drink">
+      <option value=""> O que você gostaria de beber? </option>
+      <option value="{{b}} " *ngFor='let b of bebidas'> {{b}} </option>
       <option> mais tarde usaremos uma diretiva para preencher as opções do menu suspenso </option>
     </select>
   </div>
 
-  <div class = "form-group">
+  <div class="form-group">
     <label> Quente ou frio? </label>
-    <div class = "check-form">
-      <input class = "formulário-verificação-entrada" type = "radio" [ngModel]="orderModel.tempPreference" name = "tempPreference" value = "hot">
-      <label class = "form-check-label"> Quente </label>
+    <div class="check-form">
+      <input class="formulário-verificação-entrada" type="radio" [ngModel]="orderModel.tempPreference"
+        name="tempPreference" value="hot">
+      <label class="form-check-label"> Quente </label>
     </div>
-    <div class = "check-form">
-      <input class = "formulário-verificação-entrada" type = "radio" [ngModel]="orderModel.tempPreference" name = "tempPreference" value = "cold"> 
-      <label class = "form-check-label"> Frio </label>
+    <div class="check-form">
+      <input class="formulário-verificação-entrada" type="radio" [ngModel]="orderModel.tempPreference"
+        name="tempPreference" value="cold">
+      <label class="form-check-label"> Frio </label>
     </div>
   </div>
-  
-  <div class = "verificação de formulário mb-3">
-    <input class = "formulário-verificação-entrada" type = "caixa de seleção"   nome = "sendmsg">
-    <label class = "form-check-label"> Envie-me uma mensagem de texto quando meu pedido estiver pronto </label>
+
+  <div class="verificação de formulário mb-3">
+    <input class="formulário-verificação-entrada" type="caixa de seleção" nome="sendmsg">
+    <label class="form-check-label"> Envie-me uma mensagem de texto quando meu pedido estiver pronto </label>
   </div>
-    
-  <button class = "btn btn-primary" (click)="AtualizaModel(orderForm)" > Fazer pedido </button>
-  
 
-</form>  
+  <button class="btn btn-primary" (click)="AtualizaModel(orderForm)"> Fazer pedido </button>
+
+
+</form>
 
 <br>
-{{orderForm.value.name}} <br>
-{{orderForm.value.email}} <br>
-{{orderForm.value.phone}} <br>
-{{orderForm.value.drink}} <br>
-{{orderForm.value.tempPreference}} <br>
-<br>
+<h4>Pedidos</h4>
+
+<div *ngIf='orderModel.phone != 0'>  
+
+  <ul>Nome: {{orderModel.name}} </ul>
+  <ul>Email: {{orderModel.email}} </ul>
+  <ul>Tel: {{orderModel.phone}} </ul>
+  <ul>Drink: {{orderModel.drink}} </ul>
+  <ul>Temperatura: {{orderModel.tempPreference}} </ul>
+
+</div>
 
 
 <h2>Equipe</h2>
-<li *ngFor='let m of membros' > {{m}} </li>
-
+<li *ngFor='let m of membros'> {{m}} </li>
