--- a/Exercicios/exerc13/src/app/app.component.html
+++ b/Exercicios/exerc13/src/app/app.component.html
@@ -1,79 +1,84 @@
-<form #orderForm="ngForm">
+<div class="container border">
+
+  <form #orderForm="ngForm">
 
     <div>
-        <h1 align="center">
-          {{title}}
-        </h1>
-      </div>
-  <h4 align="center"> {{Status}} </h4>
-  <table border="1" align="center">
-    <tr>
+      <h1 align="center">
+        {{title}}
+      </h1>
+    </div>
+    <h4 align="center"> {{Status}} </h4>
+    <table border="1" align="center">
+      <tr>
 
-      <th>Quantidade</th>
-      <th>Descriação</th>
+        <th>Quantidade</th>
+        <th>Descriação</th>
 
-    </tr>
-    <tr *ngFor="let itens of solicitacao">
-      <td> {{itens.quantidade}} </td>
-      <td>  {{itens.nome}} </td>
+      </tr>
+      <tr *ngFor="let itens of solicitacao">
+        <td> {{itens.quantidade}} </td>
+        <td> {{itens.nome}} </td>
 
-    </tr>
-  </table>
-  
-
-
-
-  <br> <br>
-  <h4>Pedido</h4>
-  <div class="form-group">
-    <label> Nome: </label>
-    <input type="text" class="form-control" [(ngModel)]="orderModel.name" name="name">
-  </div>
+      </tr>
+    </table>
 
 
 
-  <div class="form-group">
-    <label> E-mail: </label>
-    <input type="email" class="form-control" [(ngModel)]="orderModel.email" name="email">
-  </div>
 
-  <div class="form-group">
-    <label> Telefone: </label>
-    <input type="tel" class="form-control" [(ngModel)]="orderModel.phone" name="phone">
-  </div>
+    <br> <br>
+    <h4>Pedido</h4>
+    <div class="form-group">
+      <label> Nome: </label>
+      <input type="text" class="form-control" [(ngModel)]="orderModel.name" name="name">
+    </div>
 
 
-  <div class="form-group">
-    <label> O que você gostaria de beber </label>
-    <select class="custom-select" [(ngModel)]="orderModel.drink" name="drink">
-      <option value=""> Selecionar</option>
-      <option value="{{b}} " *ngFor='let b of bebidas'> {{b}} </option>
-    </select>
-  </div>
 
-  <div class="form-group">
-    <label> Quantidade: </label>
-    <input type="tel" class="form-control" [(ngModel)]="orderModel.quantidadebebida" name="quantidadebebida">
-  </div>
+    <div class="form-group">
+      <label> E-mail: </label>
+      <input type="email" class="form-control" [(ngModel)]="orderModel.email" name="email">
+    </div>
 
-  <div class="form-group">
-    <label> O que você gostaria de Comer </label>
-    <select class="custom-select" [(ngModel)]="orderModel.comer" name="comer">
-      <option value=""> Selecionar</option>
-      <option value="{{c}} " *ngFor='let c of food'> {{c}} </option>
-    </select>
-  </div>
-
-  <div class="form-group">
-    <label> Quantidade: </label>
-    <input type="tel" class="form-control" [(ngModel)]="orderModel.quantidadecomer" name="quantidadecomer">
-  </div>
+    <div class="form-group">
+      <label> Telefone: </label>
+      <input type="tel" class="form-control" [(ngModel)]="orderModel.phone" name="phone">
+    </div>
 
 
-  <button class="btn btn-primary" (click)="addItem()"> Adicionar Pedido </button>
-  <br><br>
-  <button class="btn btn-primary" (click)="confirma()"> Finalizar Pedido </button>
+    <div class="form-group">
+      <label> O que você gostaria de beber </label>
+      <select class="custom-select" [(ngModel)]="orderModel.drink" name="drink">
+        <option value=""> Selecionar</option>
+        <option value="{{b}} " *ngFor='let b of bebidas'> {{b}} </option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label> Quantidade: </label>
+      <input type="tel" class="form-control" [(ngModel)]="orderModel.quantidadebebida" name="quantidadebebida">
+    </div>
+
+    <div class="form-group">
+      <label> O que você gostaria de Comer </label>
+      <select class="custom-select" [(ngModel)]="orderModel.comer" name="comer">
+        <option value=""> Selecionar</option>
+        <option value="{{c}} " *ngFor='let c of food'> {{c}} </option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label> Quantidade: </label>
+      <input type="tel" class="form-control" [(ngModel)]="orderModel.quantidadecomer" name="quantidadecomer">
+    </div>
 
 
-</form>
+    <button class="btn btn-primary" (click)="addItem()"> Adicionar Pedido </button>
+    <br><br>
+    <button class="btn btn-primary" (click)="confirma()"> Finalizar Pedido </button>
 
+
+  </form>
+
+
+
+</div>
