--- a/Aplicacao/frontend/src/app/Matricula/matricula.component.html
+++ b/Aplicacao/frontend/src/app/Matricula/matricula.component.html
@@ -1,1 +1,4 @@
-<p>matricula works!</p>
+<a class="btn btn-primary" routerLink="/matricula/cadastro" role="button">Cadastrar </a>
+<a class="btn btn-primary" routerLink="/matricula/deletar" role="button">Deletar </a>
+<a class="btn btn-primary" routerLink="/matricula/consulta" role="button">Consultar </a>
+<a class="btn btn-primary" routerLink="/matricula/alterar" role="button">Alerar </a>
