--- a/Aplicacao/frontend/src/app/home/home.component.html
+++ b/Aplicacao/frontend/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" routerLink="/">Escola Municipal Antenor Vieira da Silva</a>
+            <a class="navbar-brand" routerLink="/"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -18,16 +18,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/matricula" routerLinkActive="active">Matriculas</a>
                   </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Link dropdown
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                  </div>
-                </li>
+                
               </ul>
             </div>
           </nav>
@@ -36,3 +27,5 @@
     
     
     </div>
+
+    
