--- a/Aplicacao/frontend/src/app/Aluno/aluno-deletar/aluno-deletar.component.html
+++ b/Aplicacao/frontend/src/app/Aluno/aluno-deletar/aluno-deletar.component.html
@@ -1,1 +1,24 @@
-<p>aluno-deletar works!</p>
+
+
+<h3>Deletar Aluno</h3>
+
+
+<form >
+
+  <div class="form-group">
+    <label for="matricula">Matricula</label>
+    <input type="number"
+   
+     name="id" 
+     id="id"
+    [(ngModel)]="aluno.id">
+
+  </div>
+
+  <button  class="btn btn-primary" (click)="deletar()">Finalizar</button>
+
+</form>
+
+<hr>
+
+<input type="text" value="{{mensagem}}" disabled> 
