--- a/mysql mongo/src/app/lista/lista.component.html
+++ b/mysql mongo/src/app/lista/lista.component.html
@@ -8,9 +8,9 @@
     </thead>
     <tbody>
         <tr *ngFor="let cliente of clientes">
-            <td>{{ cliente.ID }}</td>
-            <td>{{ cliente.Nome }}</td>
-            <td>{{ cliente.CPF }}</td>
+            <td>{{ cliente.id }}</td>
+            <td>{{ cliente.nome }}</td>
+            <td>{{ cliente.cpf }}</td>
         </tr>
     </tbody>
 </table>
