--- a/mysql mongo/src/app/deleta/deleta.component.html
+++ b/mysql mongo/src/app/deleta/deleta.component.html
@@ -1,16 +1,46 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>ID</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><input type="text" name="id" id="id" [(ngModel)]="cliente.id"></td>
-        </tr>
-    </tbody>
-</table>
+<div>
+    <br>
+    <h3 aling="center">Selecione o Aluno</h3>
+    <hr>
+    <select class="form-control" type="text" [(ngModel)]="cliente">
+        <option *ngFor="let c of clientes" [ngValue]="c">
+            <p>{{ c.nome}}</p>
+        </option>
+    </select><br>
 
-<button class="btn btn-success" (click)="deleta()">
-    Deleta
-</button>
+</div>
+
+
+<div *ngIf="cliente.id != null">
+    <h4>Dados Alunos</h4>
+    <hr>
+    <div class="form-group row">
+        <label for="id" class="col-sm-2 col-form-label">Registro(ID): </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="id" [(ngModel)]="cliente.id" value="cliente.id" disabled>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="nome" class="col-sm-2 col-form-label">Nome: </label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="nome" [(ngModel)]="cliente.nome" value="cliente.nome" disabled>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="cpf" class="col-sm-2 col-form-label">CPF: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="cpf" [(ngModel)]="cliente.cpf" value="cliente.cpf" disabled>
+        </div>
+    </div>
+
+
+
+    <button class="btn btn-danger" (click)="deleta()">
+        Remover
+    </button>
+</div>
+<hr><br>
+
+<div *ngIf="resposta == null" class="alert alert-success" role="alert">
+    Registro Removido com sucesso
+</div>
